# grist-client-rs

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  generate.sh
.github/workflows/: rust.yml
src/apis/: attachments_api.rs  columns_api.rs  configuration.rs  data_api.rs  docs_api.rs  mod.rs  orgs_api.rs  records_api.rs  sql_api.rs  tables_api.rs  users_api.rs  webhooks_api.rs  workspaces_api.rs
src/models/: _docs__doc_id__sql_post_request.rs  _docs__doc_id__sql_post_request_args_inner.rs  _docs__doc_id__webhooks_post_200_response.rs  _docs__doc_id__webhooks_post_request.rs  access.rs  attachment_metadata.rs  attachment_metadata_list.rs  attachment_metadata_list_records_inner.rs  attachments_transfer_status.rs  attachments_transfer_status_status.rs  columns_list.rs  columns_list_columns_inner.rs  columns_without_fields.rs  columns_without_fields_columns_inner.rs  create_columns.rs  create_columns_columns_inner.rs  create_fields.rs  create_tables.rs  create_tables_tables_inner.rs  create_tables_tables_inner_columns_inner.rs  data.rs  delete_actions_request.rs  describe_org_org_id_parameter.rs  doc.rs  doc_parameters.rs  doc_with_workspace.rs  docs_doc_id_sql_post_request.rs  docs_doc_id_sql_post_request_args_inner.rs  docs_doc_id_webhooks_get_200_response.rs  docs_doc_id_webhooks_post_request_webhooks_inner.rs  docs_doc_id_webhooks_webhook_id_delete_200_response.rs  document_attachments_location.rs  document_store_setting.rs  fields.rs  get_fields.rs  mod.rs  modify_doc_access_request.rs  modify_org_access_request.rs  modify_workspace_access_request.rs  (+47 more)
