[package]
name = "grist-client"
version = "0.0.1"
authors = ["QazCetelic"]
description = "An API for manipulating Grist sites, workspaces, and documents."
license = "LGPL"
edition = "2021"
repository = "https://github.com/QazCetelic/grist-client-rs"
readme = "README.md"
keywords = ["grist", "client"]
exclude = ["/.github", ".openapi-generator-ignore", "generate.sh"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "default-tls", "stream"] }
